--- a/lessons/editor.css
+++ b/lessons/editor.css
@@ -30,3 +30,11 @@
   cursor: pointer;
   border: none;
 }
+
+#mentor {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: pink;
+  padding: 1em;
+}
