--- a/lessons/editor.css
+++ b/lessons/editor.css
@@ -33,8 +33,22 @@
 
 #mentor {
   position: absolute;
+  width: 600px;
+  height: 200px;
+  display: flex;
+  background: black;
+}
+
+#mentor-message {
+  color: white;
+  padding: 1em;
+  font-family: sans-serif;
+  font-size: 1.3em;
+  letter-spacing: 2px;
+}
+
+#mentor img {
   width: 200px;
   height: 200px;
-  background: pink;
-  padding: 1em;
 }
+
