Center background for skills

--- a/skills/skills.css
+++ b/skills/skills.css
@@ -11,6 +11,8 @@ html, body, svg {
 body {
   background: url('diablo-background.jpg');
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   background-color: black;
 }
 
