--- a/quests/MainPage/Levels/Quest.css
+++ b/quests/MainPage/Levels/Quest.css
@@ -21,8 +21,14 @@
   position: absolute;
   bottom: 32;
   right: 32;
-  font-size: 32;
-  color: #62b628;
+  font-size: 20px;
+  background: #62b628;
+  color: #333;
+  border-radius: 8px;
+  width: 20px;
+  height: 20px;
+  padding: 4px 0 4px 8px;
+  line-height: 20px;
 }
 
 .quest-skills-list {
