--- a/quests/editor.css
+++ b/quests/editor.css
@@ -1,3 +1,5 @@
+@import 'mentor.css';
+
 #error {
   position: absolute;
   bottom: 0;
@@ -32,38 +34,3 @@ button {
   height: 70px;
   line-height: 70px;
 }
-
-#close-mentor-button {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: white;
-  background: black;
-  border: white 2px solid;
-  border-radius: 5px;
-  padding: 0.5em;
-  margin: 8px;
-  text-transform: uppercase;
-}
-
-#mentor {
-  position: absolute;
-  width: 600px;
-  height: 200px;
-  display: flex;
-  background: black;
-}
-
-#mentor-message {
-  color: white;
-  padding: 1em;
-  font-family: sans-serif;
-  font-size: 1.3em;
-  letter-spacing: 2px;
-}
-
-#mentor img {
-  width: 200px;
-  height: 200px;
-}
-
