--- a/quests/mentor.css
+++ b/quests/mentor.css
@@ -4,12 +4,13 @@
   bottom: 0;
   right: 0;
   left: 0;
-  height: 200px;
+  height: 300px;
   background: black;
 }
 
 #napaleon-message {
-  color: white;
+  background: #111;
+  color: #eee;
   padding: 1em;
   font-family: sans-serif;
   font-size: 1.3em;
@@ -20,12 +21,15 @@
 #napaleon img {
   width: 200px;
   height: 200px;
+  align-self: end;
+  border-radius: 4px;
 }
 
 #napaleon {
   flex: 1;
   display: flex;
-  background: black;
+  background: linear-gradient(0deg, #cfcac7, black);
+  background: #111;
 }
 
 #napaleon pre {
@@ -47,11 +51,15 @@
 }
 
 .is-completed {
-  background: green;
+  background: #39a239;
+  color: white;
 }
 
 .is-completed .icon {
-  color: green;
+  color: #00ff00;
+  border: 1px solid #00ff00;
+  padding: 0px 2px 0px 4px;
+  
 }
 
 .not-completed {
