--- a/quests/playground.css
+++ b/quests/playground.css
@@ -1,3 +1,11 @@
+@import 'Topbar.css';
+
+#playground {
+  height: 100%;
+  width: 100%;
+  --topbar-height: 50px;
+}
+
 button {
   outline: none;
   box-shadow: none;
@@ -10,7 +18,7 @@ button {
 
 #run-button {
   position: absolute;
-  top: 0;
+  top: var(--topbar-height);
   right: 50%;
 
   padding: 0 1em;
@@ -19,3 +27,53 @@ button {
   height: 70px;
   line-height: 70px;
 }
+
+#playground .grid {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 100%;
+  width: 100%;
+}
+
+#editor {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  margin: 0;
+}
+
+#editor code {
+  margin-top: -24px;
+  margin-bottom: -30px;
+  font-size: 18px;
+}
+
+#editor code:focus-visible {
+  outline: none;
+}
+
+#result {
+  width: 100%;
+  height: 100%;
+}
+
+
+#loader {
+  position: absolute;
+  right: 0;
+  top: var(--topbar-height);
+  background: green;
+  color: white;
+  font-size: 1.3em;
+  font-family: monospace;
+  padding: 16px;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+#loader.show {
+  opacity: 1;
+}
+
+
