--- a/quests/MainPage/Levels/Quest.css
+++ b/quests/MainPage/Levels/Quest.css
@@ -39,6 +39,10 @@
   width: var(--box-size);
   overflow: hidden;
   padding: 2em;
+  display: none;
+}
+
+.quest:hover .quest-skills-list {
   display: flex;
 }
 
