Use 2 google fonts everywhere

--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 @import 'Login.css';
 @import 'BottomBar.css';
+@import '@typography.css';
 
 :root {
   --top-border-size: 70px;
@@ -8,8 +9,4 @@
 
 * {
   box-sizing: border-box;
-}
-
-body {
-  font-family: monospace, sans-serif;
 }
