--- a/quests/mentor.css
+++ b/quests/mentor.css
@@ -12,9 +12,7 @@
   background: #111;
   color: #eee;
   padding: 1em;
-  font-family: sans-serif;
   font-size: 1.3em;
-  letter-spacing: 2px;
   line-height: 1.5;
   cursor: not-allowed;
 }
@@ -61,7 +59,7 @@
   padding: 16px;
   font-size: 20px;
   line-height: 20px;
-  font-family: monospace;
+  font-family: var(--code-font);
   border-bottom: solid black 1px;
 }
 
