--- a/quests/playground.css
+++ b/quests/playground.css
@@ -13,7 +13,7 @@ button {
   border: none;
   font-size: 1.5em;
   font-weight: bold;
-  font-family: monospace;
+  font-family: var(--code-font);
 }
 
 #run-button {
@@ -66,7 +66,7 @@ button {
   background: green;
   color: white;
   font-size: 1.3em;
-  font-family: monospace;
+  font-family: var(--code-font);
   padding: 16px;
   opacity: 0;
   transition: opacity 0.5s;
