--- a/quests/playground.css
+++ b/quests/playground.css
@@ -76,4 +76,8 @@ button {
   opacity: 1;
 }
 
-
+#playground pre[class*=language-],
+#mentor pre[class*=language-] {
+  border: none;
+  box-shadow: none;
+}
