--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import 'Login.css';
 @import 'BottomBar.css';
-@import '@typography.css';
+@import 'typography.css';
+@import 'HomePage/HomePage.css';
 
 :root {
   --top-border-size: 70px;
