--- a/src/quests/QuestStory.css
+++ b/src/quests/QuestStory.css
@@ -3,3 +3,11 @@
   color: black;
   padding: 1em;
 }
+
+#quest-story img,
+#quest-story video {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100vh;
+}
