Improve playground styles

--- a/src/quests/playground.css
+++ b/src/quests/playground.css
@@ -5,6 +5,11 @@
   width: 100%;
   --topbar-height: 50px;
   position: relative;
+  background: black;
+}
+
+iframe {
+  border: none;
 }
 
 button {
