--- a/src/quests/MainPage/Panel.css
+++ b/src/quests/MainPage/Panel.css
@@ -1,29 +1,26 @@
 .panel {
-  --height: 95vh;
+  --height: 100vh;
   height: var(--height);
-  position: relative;
-  text-align: center;
-  overflow: hidden;
-}
-
-.panel svg {
-  display: inline-block;
-  width: var(--height);
-  height: calc(var(--height) * 1.3);
-  margin: 0;
-  padding: 0;
-  transform: rotate(-90deg) translate(15vh, 0vh);
-  transform-origin: center;
+  color: white;
+  padding: 1rem;
+  background: black;
 }
 
 .panel .panel-content {
-  position: absolute;
-  top: 15.5%;
-  left: 25%;
-  right: 25%;
-  z-index: 1;
-
+  height: 100%;
+  background: url('img/panel.jpg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: black;
+  padding: 10vh 45vh;
   text-align: justify;
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+.panel .panel-content p {
+  margin: 0.5em;
 }
 
 /*          viewBox="2180 300 1700 1400" */
