Path fixes for login page

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,6 @@
 @import 'BottomBar.css';
 @import 'typography.css';
 @import 'HomePage/HomePage.css';
-@import 'skills/Skills.css';
+@import 'skills/skills.css';
 @import 'quests/quests.css';
 @import 'quests/quest.css';
