Fix conflicting styles for home page bottom bar

--- a/src/BottomBar.css
+++ b/src/BottomBar.css
@@ -5,6 +5,8 @@
   left: calc(-1 * var(--size) / 2);
   bottom: 0;
   left: 0;
+  height: var(--size);
+  width: var(--size);
 }
 
 #bottom-bar .avatar {
