--- a/src/quests/QuestStory.css
+++ b/src/quests/QuestStory.css
@@ -7,5 +7,25 @@
   display: block;
   margin: auto;
   max-width: 100%;
-  max-height: 100vh;
+  max-height: 100%;
+}
+
+#quest-story figure {
+  border: 1px solid #555;
+  border-radius: 5px;
+}
+
+#quest-story figure img,
+#quest-story figure video {
+  max-width: 80vw;
+  max-height: 80vh;
+}
+
+#quest-story figcaption {
+  text-align: center;
+  font-size: 0.9em;
+  color: #f97fff;
+  font-style: italic;
+  padding: 1em;
+  background: #333;
 }
