--- a/src/quests/mentor.css
+++ b/src/quests/mentor.css
@@ -5,18 +5,22 @@
   z-index: 1;
 }
 
+/*
 #napaeon-message ::selection,
 #napaeon-message::selection {
   background: none;
   color: revert;
 }
+*/
 
 #napaleon-message {
   height: fit-content;
   flex: 1;
 }
 
-#napaleon-message, #napaeon-message ::selection {
+#napaleon-message,
+#napaeon-message ::selection,
+#napaeon-message::selection {
   background: #ddd;
   color: #222;
   padding: 1em;
@@ -59,9 +63,25 @@
   color: revert;
 }
 
-#steps-progress {
+#steps-progress, #steps-progress ::selection {
   flex: 1;
 }
+
+#steps-progress,
+#steps-progress ::selection {
+  background: #333;
+  color: #ddd;
+  cursor: not-allowed;
+}
+
+#steps-progess .not-completed ::selection {
+  background: red;
+}
+
+#steps-progress .not-completed .icon {
+  opacity: 0.7;
+}
+
 
 #steps-progress > * {
   padding: 16px;
@@ -93,19 +113,6 @@
   padding: 0px 2px 0px 4px;
   
 }
-
-#steps-progress .not-completed,
-#steps-progess .not-completed::selection,
-#steps-progress .not-completed .icon::selection {
-  background: #333;
-  color: #ddd;
-  cursor: not-allowed;
-}
-
-#steps-progress .not-completed .icon {
-  opacity: 0.7;
-}
-
 .achievements {
   display: flex;
   margin-top: 12px;
