Add FrictionTable in an empty Velocity quest

--- a/src/quests/QuestPage.css
+++ b/src/quests/QuestPage.css
@@ -1,6 +1,7 @@
 @import 'Topbar.css';
 @import "QuestStory.css";
 @import "mentor.css";
+@import "quests/FrictionTable.css";
 
 #quest-page {
   background: white;
