--- a/src/quests/MainPage/Levels/Quest.css
+++ b/src/quests/MainPage/Levels/Quest.css
@@ -1,38 +1,50 @@
 .quest-card {
-  --padding: 32px;
-  --box-size: 500px;
-  width: calc(var(--box-size) + var(--padding) * 2);;
-  border-radius: 16px;
+  --box-size: 250px;
+  width: var(--box-size);
+  border-radius: 4px;
+  overflow: hidden;
   background: #eee;
   padding: var(--padding);
   margin: 32px;
 }
 
+.quest-card-caption {
+  --caption-size: 8rem;
+  height: var(--caption-size);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .quest {
   position: relative;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+
 .quest-title {
+  --padding: 8px;
+  padding: var(--padding);
   background: #eee;
   color: #333;
-  margin-bottom: 1rem;
   text-align: center;
+  font-size: 1rem;
   line-height: 2;
-  height: 4em;
 }
 
 .quest-title code {
   background: #333;
   color: #eee;
-  padding: 5px;
+  padding: 2px 4px;
   border-radius: 2px;
 }
 
 .quest img {
   width: var(--box-size);
   height: var(--box-size);
-  border: solid black 2px;
 }
 
 .quest.is-completed img {
