--- a/src/Login.css
+++ b/src/Login.css
@@ -18,7 +18,7 @@
 }
 
 #login img {
-  width: 300px;
+  height: 300px;
   object-fit: cover;
   object-position: 0 20px;
   filter: hue-rotate(40deg);
@@ -43,7 +43,7 @@
   display: block;
   text-align: left;
   color: #111;
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 1.5;
   text-transform: uppercase;
   display: flex;
