Start adding learning progress items

--- a/src/app.css
+++ b/src/app.css
@@ -4,3 +4,4 @@
 @import 'HomePage/HomePage.css';
 @import 'skills/skills.css';
 @import 'quests/quests.css';
+@import 'LearningProgress/LearningProgress.css';
