--- a/src/LearningProgress/LearningProgress.css
+++ b/src/LearningProgress/LearningProgress.css
@@ -49,4 +49,33 @@ circle {
   fill: none;
 }
 
+.lecture-skills {
+  display: inline-flex;
+  margin: 0.5em;
+}
 
+.lecture-skill {
+  background: #333;
+  color: #eee;
+  padding: 0.4rem 0.8rem;
+  margin: 0.4rem;
+  font-size: 1rem;
+  border-radius: 0.2rem;
+
+  font-weight: 800;
+  display:grid;
+  justify-content:center;
+
+  border-radius: 25px;
+  color: #fff;
+  box-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 10px #0ba9ca, 0 0 15px #0ba9ca;
+  -webkit-animation: blink 0.7s infinite alternate;
+  animation: blink 0.7s infinite alternate;
+}
+
+
+@keyframes blink {
+  100% {
+    box-shadow: 0 0 3px #fff, 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0ba9ca;
+  }
+}
