--- a/src/quests/MainPage/Levels/Quest.css
+++ b/src/quests/MainPage/Levels/Quest.css
@@ -124,3 +124,27 @@
   padding: 0;
   margin: 0;
 }
+
+/* Glow :)
+ * https://codersblock.com/blog/creating-glow-effects-with-css/
+ */
+.status-new {
+  box-shadow:
+    0 0 60px 30px #fff,  /* inner white */
+    0 0 100px 60px #0f0, /* middle green */
+    0 0 140px 90px #0ff; /* outer orange */
+}
+
+.status-homework {
+  box-shadow:
+    0 0 60px 30px #fff,  /* inner white */
+    0 0 100px 60px #00f, /* middle blue */
+    0 0 140px 90px #0ff; /* outer orange */
+}
+
+.status-forgotten {
+  box-shadow:
+    0 0 60px 30px #fff,  /* inner white */
+    0 0 100px 60px #f00, /* middle red */
+    0 0 140px 90px #f00; /* outer red */
+}
