--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 @import 'Login.css';
 @import 'BottomBar.css';
+@import 'Topbar.css';
 @import 'typography.css';
 @import 'HomePage/HomePage.css';
 @import 'skills/skills.css';
