Add snoop video to the Quiz page :)

--- a/src/app.css
+++ b/src/app.css
@@ -6,3 +6,4 @@
 @import 'skills/skills.css';
 @import 'quests/quests.css';
 @import 'LearningProgress/LearningProgress.css';
+@import 'Quiz/QuizPage.css';
