--- a/src/Quiz/QuizPage.css
+++ b/src/Quiz/QuizPage.css
@@ -1,5 +1,23 @@
+#quiz-page  {
+  --figcaption-height: 3rem;
+}
+
 #quiz-page figure {
   text-align: center;
   width: 100%;
-  max-height: 100%;
+}
+
+#quiz-page figure video,
+#quiz-page figure img {
+  max-height: calc(100vh - var(--figcaption-height));
+}
+
+#quiz-page figcaption {
+  height: var(--figcaption-height);
+  line-height: var(--figcaption-height);
+  color: #dc70dc;
+}
+
+#quiz-page p {
+  padding: 0 2em;
 }
