--- a/src/Quiz/Quiz.css
+++ b/src/Quiz/Quiz.css
@@ -15,6 +15,20 @@
   grid-row-gap: 4rem;
 }
 
+.quiz-item .answer-variant {
+  width: 100%;
+  height: 100%;
+}
+
+.quiz-item .answer-variant {
+  width: 100%;
+  height: 100%;
+}
+
+.quiz-item .answer-variant.is-selected .panel-content {
+  filter: brightness(2) hue-rotate(0deg);
+}
+
 .quiz-item .panel {
   background: none;
   padding: 0;
